--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Stuart Monro
 description: My stuff
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/scuba_minion.jpg
 
 #
 # Flags below are optional
