--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-paginate
 
-include: ['_pages']
+include: ['_pages', '_pages/travel_folder']
 
 paginate: 1
 paginate_path: /page:num/
